fixed margins and paddings in Menu, fixed responsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,10 @@ left:-110px;
 .menu{
     text-transform: capitalize;
     color: white;
+    overflow-wrap: break-word;
 
 }
+
 .menu h1{
     font-family: 'Lato', sans-serif;
     text-decoration: underline;
@@ -123,6 +125,12 @@ left:-110px;
     color: red;
 }
 
+.menu h2{
+    text-align: center;
+    padding-bottom: 3%;
+    margin:0;
+}
+
 /* list styles */
 ul {
     list-style: none;
@@ -130,20 +138,22 @@ ul {
     padding:0;
 }
 .starters {
-    padding-top: 30px;
-    width: 50%;
+    width: 48%;
     text-align: center;
-    display:block;
     float: left;   
+    margin-left:1%;
+    margin-right:1%;
 }
-
 
 .mains {
-    padding-top: 30px;
-    width: 50%;
+    width: 48%;
     text-align: center;
-    display:inline-block;
+    float:left;
+    margin-left:1%;
+    margin-right:1%;
 }
+
+
 
 .sides{
     text-align: center;
@@ -153,9 +163,15 @@ ul {
     font-size: 28px;
     border-radius: 25px;
     width: 50%;
-    height: 155px;
     margin: auto;
-    
+    clear:both;
+}
+
+.container{
+    display:inline-block;
+    padding-top:30px;
+    width:100%;
+
 }
 .sides h2{
     font-family: 'Bebas Neue', cursive;
@@ -173,6 +189,7 @@ ul {
     font-family: 'Oswald', sans-serif;
     margin: 0%;
     padding: 0%;
+    font-size: 80%;
 }
 
 .drinks {
@@ -182,48 +199,56 @@ ul {
 }
 
 .left-dessert{
-float: left;
-display:block;
 width:33.33%;
 text-align: center;
+float:left;
+margin:auto;
 }
 
 .center-dessert{
-
 width:33.33%;
 text-align: center;
-display:inline-block;
+float:left;
+margin:auto;
 }
 
 .right-dessert{
-float:right;
-display:block;
 width:33.33%;
-text-align: center;
+text-align:center;
+float:left;
+margin:auto;
 }
+
 .desserts{
-    width: 100%;
-    margin-top:0px;   
+    width: 100%; 
     padding-top:30px;
     text-align: center;
     overflow: hidden;
-    
 }
+.desserts p{
+    margin:0;
+}
+
 .desserts h2{
     padding-top: 30px;
     text-align: center;
 }
 
+
+
 /* NEW MENU LIST STYLING */ /* ----------------- CHANGE THIS ------------ */
 .starters p, h3{
     margin:0;
+    
 }
 .starters li {
     padding-bottom: 15px;
 }
 .starters p{
     font-style: italic;
+    max-width: 95%;
 }
+
 
 .mains p, h3{
     margin:0;
@@ -233,6 +258,7 @@ text-align: center;
 }
 .mains p{
     font-style: italic;
+    max-width: 95%;
 }
 
 ul > span {
@@ -280,7 +306,7 @@ font-size: 150%;
 .social-networks > li{
     display: inline-block;
     text-align: center;
-    padding: 0 20px;
+    padding: 0 5px;
 }
 
 .social-networks i{
